--- a/css/main.css
+++ b/css/main.css
@@ -7,3 +7,16 @@
 	padding-right: 75px;
 }
 
+.faq_question {
+    margin: 0px;
+    padding: 0px 0px 5px 0px;
+    display: inline-block;
+    cursor: pointer;
+    font-weight: bold;
+}
+ 
+.faq_answer_container {
+    height: 0px;
+    overflow: hidden;
+    padding: 0px;
+}
